# tase2_phase_switching

./: .gitignore  LICENSE  README.md  launch_tase2_app.command  launch_tase2_simulator.command  pyproject.toml  run-claude.sh  run-codex.sh  run_desktop_app.py  run_simulation_app.py
docs/: tase2_geometry_simulation_commands.md  tase2_hypothesis_testing_framework.md  tase2_physics_background.md  tase2_simulation_program.md  tase_2_ml.md
src/analysis/: data_processing..ipynb  tase2_geometry_mapping_report.py  tase2_geometry_simulation.py  tase2_run_geometry_model.py  tase2_train_geometry_model.py
src/analysis/.ipynb_checkpoints/: clustering_pipeline-checkpoint.ipynb
src/ml/: phase_representation_train.py  phase_state_clustering.py  transition_predictor_train.py
src/simulations/: __init__.py  cdw_model.py  data_generation.py  geometry_inference.py  ideal_unwarp_unmix.py  particle_model.py  plot.py  simulation_app.py
src/tase2_phase_switching/: __init__.py  __main__.py  analysis.py  desktop_app.py  ml_models.py
tests/: test_analysis_pipeline.py  test_simulation_pipeline.py
